# laba_os_3

./: CMakeLists.txt  README.md
src/: main.cpp  manager.cpp  manager.h  marker.cpp  marker.h  shared.h
tests/: CMakeLists.txt  marker_tests.cpp
